parser/src/snapshots/emerald_lang_parser__string__tests__parse_f_string_concat_3.snap
---
source: src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 22,
            },
        ),
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 8,
                    },
                ),
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 0,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 8,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 9,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 22,
                                },
                            ),
                            custom: (),
                            node: FormattedValue {
                                value: Located {
                                    location: Location {
                                        row: 1,
                                        column: 1,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 4,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant {
                                        value: Str(
                                            "!",
                                        ),
                                        kind: None,
                                    },
                                },
                                conversion: 0,
                                format_spec: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
