parser/src/snapshots/emerald_lang_parser__string__tests__parse_u_string_concat_1.snap
---
source: src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 17,
            },
        ),
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 8,
                    },
                ),
                custom: (),
                node: Constant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                },
            },
        },
    },
]
